[gd_scene load_steps=5 format=3 uid="uid://kniacsvw6ecd"]

[ext_resource type="Script" path="res://scripts/base_character.gd" id="1_bdlv5"]
[ext_resource type="Texture2D" uid="uid://44is7mymlst6" path="res://media/sprites/temp_char/template_girl_hitted.png" id="2_22dny"]
[ext_resource type="PackedScene" uid="uid://cwih0xhe7lqho" path="res://nodes/hp_bar.tscn" id="3_w1yxx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyba8"]
size = Vector2(160, 32)

[node name="BaseCharacter" type="CharacterBody2D"]
script = ExtResource("1_bdlv5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_22dny")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-118, 0)
shape = SubResource("RectangleShape2D_kyba8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="HitBoxPos" type="Node2D" parent="."]

[node name="LpPos" type="Marker2D" parent="HitBoxPos"]
position = Vector2(200, 104)

[node name="HpBar" parent="." instance=ExtResource("3_w1yxx")]
